cpu, hack: Add support for external hid display
Add (hacked v1) support for displaying the CPU load on custom external
dial gauges controlled via a /dev/hidraw* interface.

Signed-off-by: Gratian Crisan <gratian@gmail.com>

--- a/panel-plugin/Makefile.am
+++ b/panel-plugin/Makefile.am
@@ -14,13 +14,16 @@ libcpugraph_la_LIBADD = \
 	$(top_builddir)/xfce4++/util/libxfce4util_pp.la \
 	@LIBXFCE4UI_LIBS@ \
 	@LIBXFCE4PANEL_LIBS@ \
-	-lm
+	-lm \
+	-ludev
 
 libcpugraph_la_SOURCES = \
 	mode.cc \
 	mode.h \
 	cpu.cc \
 	cpu.h \
+	hid.cc \
+	hid.h \
 	os.cc \
 	os.h \
 	plugin.h \
